Edit view commit and remove nodb-storage from project

--- a/BlueShift.Tools.Web/BlueShift.Tools.Web.csproj
+++ b/BlueShift.Tools.Web/BlueShift.Tools.Web.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="nodb_storage\**" />
+    <Content Remove="nodb_storage\**" />
+    <EmbeddedResource Remove="nodb_storage\**" />
+    <None Remove="nodb_storage\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="ViewModels\Cards\main.js" />
   </ItemGroup>
 
